k8s/app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-demo
  labels:
    app.kubernetes.io/part-of: gitops-demo
