k8s/app/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: gitops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - background
      tolerations:
        - key: dedicated
          operator: Equal
          value: background
          effect: NoSchedule
      containers:
        - name: worker
          image: gitops-demo-worker:local
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
